implementação do angular material e exemplificação de ng-deep e estilização global

--- a/projeto-components/src/app/card-button-cancel/card-button-cancel.component.scss
+++ b/projeto-components/src/app/card-button-cancel/card-button-cancel.component.scss
@@ -5,7 +5,7 @@
     text-align: center;
     margin-top: 10px;
     border-radius: 25px;
-    background-color: $bgColor;
+    background-color: green;
     cursor: pointer;
     font-weight: bold;
     padding: 10px;
