--- a/projeto-components/src/app/card/card.component.scss
+++ b/projeto-components/src/app/card/card.component.scss
@@ -20,3 +20,10 @@
         font-size: 40px;
     }
 }
+
+:host ::ng-deep app-card-button-cancel .card-cancel-button{
+    //background-color: yellow !important;
+}
+:host ::ng-deep .mdc-slider__track--active_fill {
+    border-color: yellowgreen !important;
+}
