exemplos do uso de properties bindings

--- a/projeto-components/src/app/app.component.html
+++ b/projeto-components/src/app/app.component.html
@@ -1,5 +1,21 @@
 <div class="cards-container">
-  <app-card></app-card>
+  <!-- <app-card 
+    planType="Simples Teste" 
+    [planPriceAlias]="1000">
+  </app-card> -->
+  
+  <app-card 
+    [planType]="cardPlanType" 
+    [planPriceAlias]="cardPlanPrice">
+  </app-card>
 
   <app-card-roxo></app-card-roxo>
 </div>
+<br />
+
+<input 
+  #meuInput
+  type="text"
+  (keyup)="handlePlanType(meuInput.value)"
+  placeholder="Digite o plano"
+/>
