--- a/projeto-components/src/app/card-button/card-button.component.html
+++ b/projeto-components/src/app/card-button/card-button.component.html
@@ -1,1 +1,4 @@
-<div class="card-button">Adquirir</div>
+<button 
+    class="card-button" 
+    (click)="onButtonClick()"
+    [disabled]="buttonDisabled">Adquirir</button>
