criação dos componentes de filtros e detalhes

--- a/projeto-filtro/src/app/app.component.html
+++ b/projeto-filtro/src/app/app.component.html
@@ -1,15 +1,14 @@
 <div class="container">
     <div class="left-container">
         <div class="top-div">
-            <!-- Conteúdo da div superior -->
+            <app-filter></app-filter>
             
         </div>
         <div class="main-left-div">
-            <!-- Conteúdo da div esquerda (80% de altura) -->
-            
+            <app-users-list></app-users-list>
         </div>
     </div>
     <div class="right-div">
-        <app-users-details></app-users-details>
+        <app-users-details [user]="userSelected"></app-users-details>
     </div>
 </div>
