--- a/projeto-filtro/src/app/components/users-details/users-details.component.html
+++ b/projeto-filtro/src/app/components/users-details/users-details.component.html
@@ -5,31 +5,31 @@
         </mat-list-item>
         <mat-divider></mat-divider>
         <mat-list-item>
-            <span class="mat-h2">Nome: </span><span class="mat-h3">Fulano da Silva</span>
+            <span class="mat-h2">Nome: </span><span class="mat-h3">{{ user.nome }}</span>
         </mat-list-item>
         <mat-divider></mat-divider>
         <mat-list-item>
-            <span class="mat-h2">Email: </span> <span class="mat-h3">joao.silvaexample.com</span>
+            <span class="mat-h2">Email: </span> <span class="mat-h3">{{ user.email }}</span>
         </mat-list-item>
         <mat-divider></mat-divider>
         <mat-list-item>
-            <span class="mat-h2">Telefone: </span> <span class="mat-h3">(11) 91234-5678</span>
+            <span class="mat-h2">Telefone: </span> <span class="mat-h3">{{ user.telefone }}</span>
         </mat-list-item>
         <mat-divider></mat-divider>
         <mat-list-item>
-            <span class="mat-h2">Endereço: </span> <span class="mat-h3">Rua das Flores, 42, São Paulo - SP</span>
+            <span class="mat-h2">Endereço: </span> <span class="mat-h3">{{ user.endereco?.rua }}, {{ user.endereco?.numero }}, {{ user.endereco?.cidade }} - {{ user.endereco?.estado }}</span>
         </mat-list-item>
         <mat-divider></mat-divider>
         <mat-list-item>
-            <span class="mat-h2">Ativo: </span> <span class="mat-h3">Sim</span>
+            <span class="mat-h2">Ativo: </span> <span class="mat-h3">{{ user.ativo }}</span>
         </mat-list-item>
         <mat-divider></mat-divider>
         <mat-list-item>
-            <span class="mat-h2">Função: </span> <span class="mat-h3">Desenvolvedor</span>
+            <span class="mat-h2">Função: </span> <span class="mat-h3">{{ user.funcao }}</span>
         </mat-list-item>
         <mat-divider></mat-divider>
         <mat-list-item>
-            <span class="mat-h2">Data de Cadastro: </span> <span class="mat-h3">20/08/2023</span>
+            <span class="mat-h2">Data de Cadastro: </span> <span class="mat-h3">{{ user.dataCadastro }}</span>
         </mat-list-item>
         <mat-divider></mat-divider>
     </mat-list>
