--- a/projeto-filtro/src/app/components/users-details/users-details.component.html
+++ b/projeto-filtro/src/app/components/users-details/users-details.component.html
@@ -5,31 +5,31 @@
         </mat-list-item>
         <mat-divider></mat-divider>
         <mat-list-item>
-            <span class="mat-h2">Nome: </span><span class="mat-h3">{{ user.nome }}</span>
+            <span class="mat-h2">Nome: </span><span class="mat-h3">{{ user.nome | dashIfEmpty}}</span>
         </mat-list-item>
         <mat-divider></mat-divider>
         <mat-list-item>
-            <span class="mat-h2">Email: </span> <span class="mat-h3">{{ user.email }}</span>
+            <span class="mat-h2">Email: </span> <span class="mat-h3">{{ user.email | dashIfEmpty}}</span>
         </mat-list-item>
         <mat-divider></mat-divider>
         <mat-list-item>
-            <span class="mat-h2">Telefone: </span> <span class="mat-h3">{{ user.telefone }}</span>
+            <span class="mat-h2">Telefone: </span> <span class="mat-h3">{{ user.telefone | phone }}</span>
         </mat-list-item>
         <mat-divider></mat-divider>
         <mat-list-item>
-            <span class="mat-h2">Endereço: </span> <span class="mat-h3">{{ user.endereco?.rua }}, {{ user.endereco?.numero }}, {{ user.endereco?.cidade }} - {{ user.endereco?.estado }}</span>
+            <span class="mat-h2">Endereço: </span> <span class="mat-h3">{{ user.endereco | address }}</span>
         </mat-list-item>
         <mat-divider></mat-divider>
         <mat-list-item>
-            <span class="mat-h2">Ativo: </span> <span class="mat-h3">{{ user.ativo }}</span>
+            <span class="mat-h2">Status: </span> <span class="mat-h3">{{ user.ativo | status }}</span>
         </mat-list-item>
         <mat-divider></mat-divider>
         <mat-list-item>
-            <span class="mat-h2">Função: </span> <span class="mat-h3">{{ user.funcao }}</span>
+            <span class="mat-h2">Função: </span> <span class="mat-h3">{{ user.funcao | dashIfEmpty}}</span>
         </mat-list-item>
         <mat-divider></mat-divider>
         <mat-list-item>
-            <span class="mat-h2">Data de Cadastro: </span> <span class="mat-h3">{{ user.dataCadastro }}</span>
+            <span class="mat-h2">Data de Cadastro: </span> <span class="mat-h3">{{ user.dataCadastro | date:'dd/MM/yyyy' | dashIfEmpty}}</span>
         </mat-list-item>
         <mat-divider></mat-divider>
     </mat-list>
