--- a/projeto-filtro/src/app/components/users-list/users-list.component.html
+++ b/projeto-filtro/src/app/components/users-list/users-list.component.html
@@ -10,13 +10,13 @@
         <!-- Coluna Data de Cadastro -->
         <ng-container matColumnDef="date">
             <th mat-header-cell *matHeaderCellDef> Data de Cadastro </th>
-            <td mat-cell *matCellDef="let element" class="users-list__item" (click)="onUserSelected(element)"> {{ element.dataCadastro }} </td>
+            <td mat-cell *matCellDef="let element" class="users-list__item" (click)="onUserSelected(element)"> {{ element.dataCadastro |  date:'dd/MM/yyyy' }} </td>
         </ng-container>
 
         <!-- Coluna Status -->
         <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef> Status </th>
-            <td mat-cell *matCellDef="let element" class="users-list__item" (click)="onUserSelected(element)"> {{ element.ativo }} </td>
+            <td mat-cell *matCellDef="let element" class="users-list__item" (click)="onUserSelected(element)"> {{ element.ativo | status }} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
