exemplos de elementref em diretiva e service, e solução para xxs

--- a/projeto-templates/src/styles.scss
+++ b/projeto-templates/src/styles.scss
@@ -1,14 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-
-body {
-    background-color: grey;
-}
-
-.meu-texto {
-    background-color: orange;
+.bg-red {
+    background-color: red;
     color: white;
-}
-
-.meu-size {
-    font-size: 30px;
 }
