--- a/projeto-templates/src/app/app.component.html
+++ b/projeto-templates/src/app/app.component.html
@@ -1,55 +1,15 @@
-<!-- <app-sem-diretiva></app-sem-diretiva>
+<!-- <div #minhaDiv></div>
 
-============================================
+<div id="minha-outra-div"></div>
 
-<app-com-diretiva></app-com-diretiva> -->
-<!-- <button disabled class="classe">Meu botão</button>
+<button (click)="createElement()">Criar Elemento</button> -->
 
-<button [attr.disabled]="true">Meu botão attr</button>
+<div appFocusSecondInput>
+    <input placeholder="Input 1" />
+    <input placeholder="Input 2" />
+    <input placeholder="Input 3" />
+</div>
 
-<button [disabled]="false">Meu botão prop</button>
+<button (click)="createElement()">Criar Elemento</button>
 
-<button appDisabled>Meu botão prop diretiva</button> -->
-<!-- <p style="background-color: orange; color: white;">Parágrafo Normal</p>
-
-<p [attr.style]="'background-color: orange; color: white;'">Attr</p>
-
-<p [style]="'background-color: orange; color: white;'">Prop</p>
-
-<p [style]="{
-    backgroundColor: 'orange',
-    color: 'white',
-}">Prop Obj</p>
-
-<p appStyle>Diretiva</p> -->
-<!-- <p class="meu-texto">Normal</p>
-
-<p [attr.class]="'meu-texto'">Attr</p>
-
-<p [className]="'meu-texto meu-size'">Prop Class Name</p>
-
-<p [class]="{
-    'meu-texto': true,
-    'meu-size': true,
-}">Prop Class Name</p>
-
-<p appClass>Diretiva</p> -->
-
-<!-- <input appListener /> -->
-<input 
-appInputBackground
-bgColor="blue"
-tColor="white"
-/>
-
-<input 
-appInputBackground
-[bgColor]="appBgColor"
-tColor="white"
-/>
-
-<input 
-appInputBackground
-bgColor="orange"
-tColor="white"
-/>
+<app-xss></app-xss>
